--- a/section04/Sample-practice/index.html
+++ b/section04/Sample-practice/index.html
@@ -5,5 +5,21 @@
     <meta name="viewport" content="width=devise-width">
 
     <title>ご利用アンケート</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+    <header>
+        <h1>ご利用アンケート</h1>
+    </header>
+
+    <hr>
+    <hr>
+    <!-- ホリゾンタルライン罫線 -->
+
+    <footer>
+        <p>&copy;　ともすた</p>
+        <!-- まるCマーク実体参照 -->
+    </footer>
+</body>
 </html>
