--- a/section5/ストップウォッチ/index.html
+++ b/section5/ストップウォッチ/index.html
@@ -34,14 +34,33 @@
   </div>
 
   <script>
+    //ゼロを追加する
+    var addZero = function (value) {
+      if (value < 10) {
+        value = '0' + value;
+      }
+      return value;
+    }
     var now = new Date();
     var seconds = now.getSeconds(); //秒を取得
 
     if (seconds < 10) {
-      seconds = '0' + seconds;
+      seconds = addZero(seconds);
     }
 
-    document.getElementById('timer').innerHTML = seconds;
+    var minutes = now.getMinutes(); //分を取得
+
+    if (minutes < 10) {
+      minutes = addZero(minutes);
+    }
+
+    var hours = now.getHours();
+
+    if (hours < 10) {
+      hours = addZero(hours);
+    }
+
+    document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
   </script>
 
 </body>
