--- a/section5/ストップウォッチ/index.html
+++ b/section5/ストップウォッチ/index.html
@@ -41,26 +41,29 @@
       }
       return value;
     }
-    var now = new Date();
-    var seconds = now.getSeconds(); //秒を取得
 
-    if (seconds < 10) {
-      seconds = addZero(seconds);
-    }
+    document.getElementById('start_stop').addEventListener('click', function () {
+      var now = new Date();
+      var seconds = now.getSeconds(); //秒を取得
 
-    var minutes = now.getMinutes(); //分を取得
+      if (seconds < 10) {
+        seconds = addZero(seconds);
+      }
 
-    if (minutes < 10) {
-      minutes = addZero(minutes);
-    }
+      var minutes = now.getMinutes(); //分を取得
 
-    var hours = now.getHours();
+      if (minutes < 10) {
+        minutes = addZero(minutes);
+      }
 
-    if (hours < 10) {
-      hours = addZero(hours);
-    }
+      var hours = now.getHours();
 
-    document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
+      if (hours < 10) {
+        hours = addZero(hours);
+      }
+
+      document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
+    });
   </script>
 
 </body>
