--- a/section5/ストップウォッチ/index.html
+++ b/section5/ストップウォッチ/index.html
@@ -34,36 +34,7 @@
   </div>
 
   <script>
-    //ゼロを追加する
-    var addZero = function (value) {
-      if (value < 10) {
-        value = '0' + value;
-      }
-      return value;
-    }
-
-    document.getElementById('start_stop').addEventListener('click', function () {
-      var now = new Date();
-      var seconds = now.getSeconds(); //秒を取得
-
-      if (seconds < 10) {
-        seconds = addZero(seconds);
-      }
-
-      var minutes = now.getMinutes(); //分を取得
-
-      if (minutes < 10) {
-        minutes = addZero(minutes);
-      }
-
-      var hours = now.getHours();
-
-      if (hours < 10) {
-        hours = addZero(hours);
-      }
-
-      document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
-    });
+   //一度削除
   </script>
 
 </body>
