--- a/section5/ストップウォッチ/index.html
+++ b/section5/ストップウォッチ/index.html
@@ -34,7 +34,21 @@
   </div>
 
   <script>
-   //一度削除
+    var start;
+
+   document.getElementById('start_stop').addEventListener
+   ('click', function(){
+     start = new Date();
+
+     setInterval(goTimer, 10);
+   });
+
+   var goTimer = function(){
+     var now = new Date();
+
+     document.getElementById('timer').innerHTML = now.getTime() - start.getTime();
+   }
+
   </script>
 
 </body>
